compiler/tests/snapshots/codegen_basic__branching_workflow_main_ts.snap
---
source: tests/codegen_basic.rs
expression: main_ts.content
---
import { cre, ok, consensusIdenticalAggregation, getNetwork, bytesToHex, prepareReportRequest, TxStatus, Runner, type Runtime, type HTTPSendRequester, type CronTrigger } from "@chainlink/cre-sdk";
import { z } from "zod";

const configSchema = z.object({
  schedule: z.string().default("TZ=UTC 0 */10 * * * *"),
  walletAddress: z.string(),
  receiverAddress: z.string(),
});

type Config = z.infer<typeof configSchema>;

const fetch_http_1 = (sendRequester: HTTPSendRequester, config: any) => {
  const req = {
    url: `https://kyc-api.example.com/status/${config.walletAddress}`,
    method: "GET" as const,
    headers: {
      "Authorization": `Bearer ${config._authToken}`,
    },
    cacheSettings: {
      store: true,
      maxAge: { seconds: 60n },
    },
  };

  const resp = sendRequester.sendRequest(req).result();

  if (!ok(resp)) {
    throw new Error(`HTTP request failed with status: ${resp.statusCode}`);
  }

  return { statusCode: resp.statusCode, body: JSON.parse(Buffer.from(resp.body, "base64").toString("utf-8")), headers: resp.headers };
};

const onCronTrigger = (runtime: Runtime<Config>, triggerData: CronTrigger): string => {
  const httpClient = new cre.capabilities.HTTPClient();
  const evmClient_eth_sepolia = new cre.capabilities.EVMClient(getNetwork({ chainFamily: "evm", chainSelectorName: "ethereum-testnet-sepolia", isTestnet: true })!.chainSelector.selector);

  const __stringify = (v: unknown) => JSON.stringify(v, (_, x) => typeof x === "bigint" ? x.toString() : x);

  // Fetch status
  const _authSecret_http_1 = runtime.getSecret({ id: "KYC_API_KEY" }).result();
  const _fetchCfg_http_1 = {
    ...runtime.config,
    _authToken: _authSecret_http_1.value,
  };
  const step_http_1 = httpClient.sendRequest(runtime, fetch_http_1, consensusIdenticalAggregation())(_fetchCfg_http_1).result();
  runtime.log(`[Fetch status] ${__stringify(step_http_1)}`);
  // Check if approved
  if (step_http_1.body.isApproved === true) {
    // Write to contract
    const report_write_1 = runtime.report(prepareReportRequest(step_http_1.body.data)).result();
    const step_write_1 = evmClient_eth_sepolia.writeReport(runtime, {
      receiver: runtime.config.receiverAddress,
      report: report_write_1,
      gasConfig: { gasLimit: "500000" },
    }).result();
    if (step_write_1.txStatus !== TxStatus.SUCCESS) {
      throw new Error(`Failed to write report: ${step_write_1.errorMessage || step_write_1.txStatus}`);
    }
    const txHash_write_1 = step_write_1.txHash || new Uint8Array(32);
    runtime.log(`Write report transaction succeeded at txHash: ${bytesToHex(txHash_write_1)}`);
    runtime.log(`[Write to contract] ${__stringify(step_write_1)}`);
    return "Minted successfully";
  } else {
    return "KYC not approved";
  }
};

const initWorkflow = (config: Config) => {
  return [
    cre.handler(
      new cre.capabilities.CronCapability().trigger({
        schedule: config.schedule,
      }),
      onCronTrigger,
    ),
  ];
};

export async function main() {
  const runner = await Runner.newRunner<Config>({ configSchema });
  await runner.run(initWorkflow);
}

main();
